# Declaratively

./: README.md  declaratively.py  declog.py  decsql.py  log_example.py  pyproject.toml  sql_example.py
